--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -323,5 +323,6 @@
   "resendCode": "إعادة إرسال الرمز",
   "verify": "تحقق",
   "invalidOtpCode": "رمز التحقق غير صحيح. حاول مرة أخرى.",
-  "retry": "إعادة المحاولة"
+  "retry": "إعادة المحاولة",
+  "noTraineesSubscribed": "لا يوجد متدربين مشتركين معك حتى الآن"
 }
