Added posts, reviews, recommended plans

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -327,7 +327,7 @@
   "retry": "إعادة المحاولة",
   "noTraineesSubscribed": "لا يوجد متدربين مشتركين معك حتى الآن",
   "deletePlan": "حذف الخطة",
-  "deletePlanConfirmation": "هل أنت متأكد أنك تريد حذف هذه الخطة؟",
+  "deletePlanConfirm": "هل أنت متأكد أنك تريد حذف هذه الخطة؟",
   "delete": "حذف",
   "cancel": "إلغاء",
   "weightLabel": "الوزن",
@@ -401,5 +401,46 @@
   "newPasswordConfirm": "تأكيد",
   "newPasswordSuccess": "تمت إعادة تعيين كلمة المرور بنجاح",
   "newPasswordError": "فشل في إعادة تعيين كلمة المرور. يرجى المحاولة مرة أخرى.",
-  "otpInvalid": "رمز التحقق غير صحيح. حاول مرة أخرى."
+  "otpInvalid": "رمز التحقق غير صحيح. حاول مرة أخرى.",
+  "noPostsYet": "لا توجد منشورات حتى الآن",
+  "reviews": "التقييمات",
+  "showAllReviews": "عرض كل التقييمات",
+  "noReviewsYet": "لا توجد تقييمات حتى الآن",
+  "posts": "المنشورات",
+  "createPost": "إنشاء منشور",
+  "seeMore": "عرض المزيد",
+  "whatsOnYourMind": "ماذا يدور في ذهنك؟",
+  "post": "نشر",
+  "editPost": "تعديل المنشور",
+  "deletePost": "حذف المنشور",
+  "update": "تحديث",
+  "deletePostConfirm": "هل أنت متأكد أنك تريد حذف هذا المنشور؟",
+  "cancel": "إلغاء",
+  "confirm": "تأكيد",
+  "makeFirstPost": "أنشئ أول منشور لك",
+  "unassignPlan": "إلغاء تعيين الخطة",
+  "unassignPlanConfirmTitle": "إلغاء تعيين الخطة",
+  "unassignPlanConfirmMessage": "هل أنت متأكد أنك تريد إلغاء تعيين هذه الخطة من المتدرب؟",
+  "unassignPlanSuccess": "تم إلغاء تعيين الخطة بنجاح",
+  "unassignPlanError": "فشل في إلغاء تعيين الخطة. يرجى المحاولة مرة أخرى.",
+  "coach": "المدرب",
+  "endSubscription": "إنهاء الاشتراك",
+  "endSubscriptionTitle": "إنهاء الاشتراك",
+  "endSubscriptionMessage": "هل أنت متأكد أنك تريد إنهاء اشتراك هذا المتدرب؟",
+  "endSubscriptionSuccess": "تم إنهاء الاشتراك بنجاح",
+  "endSubscriptionError": "فشل في إنهاء الاشتراك. يرجى المحاولة مرة أخرى.",
+  "unsubscribeTitle": "إلغاء الاشتراك من المدرب",
+  "unsubscribeMessage": "هل أنت متأكد أنك تريد إلغاء الاشتراك من هذا المدرب؟",
+  "unsubscribeSuccess": "تم إلغاء الاشتراك بنجاح",
+  "unsubscribeError": "فشل في إلغاء الاشتراك. يرجى المحاولة مرة أخرى.",
+  "rateCoach": "قيّم المدرب",
+  "writeReview": "اكتب تقييمك...",
+  "save": "حفظ",
+  "reviewSuccess": "تم إرسال التقييم بنجاح",
+  "reviewError": "فشل في إرسال التقييم. يرجى المحاولة مرة أخرى.",
+  "reviewAlreadySubmitted": "لقد قمت بإرسال تقييم لهذا المدرب مسبقاً",
+  "suggestedExercises": "التمارين المقترحة",
+  "suggestedFood": "الطعام المقترح",
+  "noSuggestedExercises": "لا توجد تمارين مقترحة متاحة",
+  "noSuggestedFood": "لا يوجد طعام مقترح متاح"
 }
