--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -317,6 +317,7 @@
   "nutrition_plans_plan_title": "Nutrition Plan Title",
   "nutrition_plans_plan_duration": "Plan Duration",
   "nutrition_plans_days": "days",
+  "nutrition_plans_day": "Day",
   "checkYourEmail": "Check your email",
   "otpVerificationMessage": "We sent you a message with a confirmation code to confirm your email. Please enter it to complete your registration.",
   "didntReceiveCode": "Didn't receive code?",
@@ -327,6 +328,7 @@
   "noTraineesSubscribed": "No trainees are subscribed to you yet",
   "deletePlan": "Delete Plan",
   "deletePlanConfirmation": "Are you sure you want to delete this plan?",
+  "deletePlanConfirm": "Are you sure you want to delete this plan?",
   "delete": "Delete",
   "cancel": "Cancel",
   "weightLabel": "Weight",
@@ -396,5 +398,44 @@
   "newPasswordConfirm": "Confirm",
   "newPasswordSuccess": "Password reset successfully",
   "newPasswordError": "Failed to reset password. Please try again.",
-  "otpInvalid": "Invalid OTP. Please try again."
+  "otpInvalid": "Invalid OTP. Please try again.",
+  "noPostsYet": "No posts yet",
+  "reviews": "Reviews",
+  "showAllReviews": "Show All Reviews",
+  "noReviewsYet": "No reviews yet",
+  "createPost": "Create Post",
+  "seeMore": "See more",
+  "whatsOnYourMind": "What's on your mind?",
+  "post": "Post",
+  "editPost": "Edit Post",
+  "deletePost": "Delete Post",
+  "update": "Update",
+  "deletePostConfirm": "Are you sure you want to delete this post?",
+  "confirm": "Confirm",
+  "makeFirstPost": "Make Your First Post",
+  "unassignPlan": "Unassign Plan",
+  "unassignPlanConfirmTitle": "Unassign Plan",
+  "unassignPlanConfirmMessage": "Are you sure you want to unassign this plan from the trainee?",
+  "unassignPlanSuccess": "Plan unassigned successfully",
+  "unassignPlanError": "Failed to unassign plan. Please try again.",
+  "coach": "Coach",
+  "endSubscription": "End Subscription",
+  "endSubscriptionTitle": "End Subscription",
+  "endSubscriptionMessage": "Are you sure you want to end this trainee's subscription?",
+  "endSubscriptionSuccess": "Subscription ended successfully",
+  "endSubscriptionError": "Failed to end subscription. Please try again.",
+  "unsubscribeTitle": "Unsubscribe from Coach",
+  "unsubscribeMessage": "Are you sure you want to unsubscribe from this coach?",
+  "unsubscribeSuccess": "Unsubscribed successfully",
+  "unsubscribeError": "Failed to unsubscribe. Please try again.",
+  "rateCoach": "Rate Coach",
+  "writeReview": "Write your review...",
+  "save": "Save",
+  "reviewSuccess": "Review submitted successfully",
+  "reviewError": "Failed to submit review. Please try again.",
+  "reviewAlreadySubmitted": "You have already submitted a review for this coach",
+  "suggestedExercises": "Suggested Exercises",
+  "suggestedFood": "Suggested Food",
+  "noSuggestedExercises": "No suggested exercises available",
+  "noSuggestedFood": "No suggested food available"
 }
