--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -87,6 +87,11 @@
   "enterPassword": "أدخل كلمة المرور",
   "validation_username_length": "يجب أن يكون اسم المستخدم 3 أحرف على الأقل",
   "validation_username_format": "يمكن أن يحتوي اسم المستخدم على أحرف وأرقام فقط",
+  "passwordRequirementsTitle": "متطلبات كلمة المرور:",
+  "passwordRequirementMinLength": "• 8 أحرف على الأقل",
+  "passwordRequirementCapital": "• حرف كبير واحد (A-Z)",
+  "passwordRequirementNumber": "• رقم واحد (0-9)",
+  "passwordRequirementMessage": "يجب أن تكون كلمة المرور 8 أحرف على الأقل، وتحتوي على حرف كبير واحد ورقم واحد",
   "registerSuccess": "تم التسجيل بنجاح! الرجاء إكمال ملفك الشخصي.",
   "signUp": "تسجيل",
   "alreadyHaveAccount": "لديك حساب بالفعل؟ سجل دخول",
@@ -106,6 +111,7 @@
   "workoutLabel": "تمرين",
   "nutritionLabel": "تغذية",
   "notificationsTitle": "الإشعارات",
+  "noNotificationsYet": "لا توجد إشعارات حتى الآن",
   "notificationsToday": "اليوم",
   "yesterday": "أمس",
   "notificationsJustNow": "الآن",
@@ -151,6 +157,7 @@
   },
   "yourExpertise": "خبرتك",
   "selectExpertiseAreas": "اختر مجالات خبرتك",
+  "selectThreeExpertise": "الرجاء تحديد 3 مجالات خبرة بالضبط",
   "weightTraining": "تدريب الأوزان",
   "cardio": "تمارين القلب",
   "yoga": "يوغا",
@@ -220,6 +227,7 @@
   "savePlan": "حفظ الخطة",
   "selectDayFirst": "الرجاء اختيار يوم أولاً",
   "apply": "تطبيق",
+  "notSet": "غير محدد",
   "note": "ملاحظة",
   "dashboard": "لوحة التحكم",
   "percentSymbol": "%",
@@ -229,6 +237,7 @@
   "fillProfile": "ملء الملف الشخصي",
   "enterFullName": "أدخل اسمك الكامل",
   "enterBio": "أدخل نبذة عنك",
+  "bio": "نبذة",
   "male": "ذكر",
   "female": "أنثى",
   "userType": "نوع المستخدم",
@@ -243,6 +252,7 @@
   "enterWeight": "الرجاء إدخال وزنك",
   "enterValidNumber": "الرجاء إدخال رقم صحيح",
   "fitnessGoals": "أهدافك الرياضية",
+  "selectThreeGoals": "الرجاء تحديد 3 أهداف بالضبط",
   "saveHealthData": "حفظ البيانات الصحية",
   "muscleGain": "زيادة العضلات",
   "overallHealth": "الصحة العامة",
@@ -255,6 +265,9 @@
   "trainee": "متدرب",
   "typeMessage": "اكتب رسالة...",
   "messages": "الرسائل",
+  "noChatsYet": "لا توجد محادثات حتى الآن",
+  "noMessagesYet": "!لا توجد رسائل بعد. ابدأ المحادثة",
+  "messageHint": "..رسالة",
   "searchForClientsFields": "البحث عن المتدربين",
   "upperChestMuscle": "عضلات الصدر العلوية",
   "shoulderFrontdelts": "عضلات الكتف الأمامية",
@@ -325,6 +338,8 @@
   "verify": "تحقق",
   "invalidOtpCode": "رمز التحقق غير صحيح. حاول مرة أخرى.",
   "retry": "إعادة المحاولة",
+  "loginFailed": "فشل تسجيل الدخول. يرجى التحقق من البيانات الخاصة بك.",
+  "typing": "يكتب",
   "noTraineesSubscribed": "لا يوجد متدربين مشتركين معك حتى الآن",
   "deletePlan": "حذف الخطة",
   "deletePlanConfirm": "هل أنت متأكد أنك تريد حذف هذه الخطة؟",
@@ -339,6 +354,11 @@
   "fatsLabel": "الدهون",
   "muscleLabel": "العضلات",
   "searchForCoachesFields": "البحث عن المدربين والمجالات..",
+  "searchTitle": "بحث",
+  "allFilter": "الكل",
+  "recommendationsFilter": "التوصيات",
+  "showProfile": "عرض الملف الشخصي",
+  "viewCoach": "عرض المدرب",
   "noRecommendedCoaches": "لا يوجد مدربين موصى بهم",
   "subscribe": "اشتراك",
   "subscribeConfirmTitle": "الاشتراك مع المدرب",
@@ -352,6 +372,7 @@
   },
   "confirm": "تأكيد",
   "subscribeSuccess": "تم إرسال طلب الاشتراك بنجاح",
+  "subscriptionRequestAcceptedSuccess": "تم قبول طلب الاشتراك بنجاح",
   "close": "إغلاق",
   "subscriptionRequestsTitle": "طلبات الاشتراك",
   "acceptRequest": "قبول",
@@ -424,6 +445,7 @@
   "unassignPlanSuccess": "تم إلغاء تعيين الخطة بنجاح",
   "unassignPlanError": "فشل في إلغاء تعيين الخطة. يرجى المحاولة مرة أخرى.",
   "coach": "المدرب",
+  "traineeSubscriptionNotActive": "قد لا يكون اشتراك المتدرب مفعل",
   "endSubscription": "إنهاء الاشتراك",
   "endSubscriptionTitle": "إنهاء الاشتراك",
   "endSubscriptionMessage": "هل أنت متأكد أنك تريد إنهاء اشتراك هذا المتدرب؟",
