--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -68,6 +68,11 @@
   "enterPassword": "Enter your password",
   "validation_username_length": "Username must be at least 3 characters",
   "validation_username_format": "Username can only contain letters and numbers",
+  "passwordRequirementsTitle": "Password Requirements:",
+  "passwordRequirementMinLength": "• At least 8 characters long",
+  "passwordRequirementCapital": "• One capital letter (A-Z)",
+  "passwordRequirementNumber": "• One number (0-9)",
+  "passwordRequirementMessage": "Password must be at least 8 characters long, contain one capital letter, and one number",
   "registerSuccess": "Registration successful! Please complete your profile.",
   "signUp": "Sign Up",
   "alreadyHaveAccount": "Already have an account? Sign in",
@@ -87,6 +92,7 @@
   "workoutLabel": "Workout",
   "nutritionLabel": "Nutrition",
   "notificationsTitle": "Notifications",
+  "noNotificationsYet": "No notifications yet",
   "notificationsToday": "Today",
   "yesterday": "Yesterday",
   "notificationsJustNow": "Just now",
@@ -132,6 +138,7 @@
   },
   "yourExpertise": "Your Expertise",
   "selectExpertiseAreas": "Select your areas of expertise",
+  "selectThreeExpertise": "Please select exactly 3 areas of expertise",
   "weightTraining": "Weight Training",
   "cardio": "Cardio",
   "yoga": "Yoga",
@@ -146,6 +153,7 @@
   "fillProfile": "Fill Profile",
   "enterFullName": "Enter your full name",
   "enterBio": "Enter your bio",
+  "bio": "Bio",
   "gender": "Gender",
   "male": "Male",
   "female": "Female",
@@ -174,9 +182,14 @@
   "muscles": "Muscles",
   "enterMusclePercentage": "Enter your muscle percentage",
   "fitnessGoals": "Fitness Goals",
+  "selectGoals": "Select your fitness goals",
+  "selectThreeGoals": "Please select exactly 3 goals",
   "saveHealthData": "Save Health Data",
   "typeMessage": "Type a message",
   "messages": "Messages",
+  "noChatsYet": "No chats yet",
+  "noMessagesYet": "No messages yet. Start the conversation!",
+  "messageHint": "message..",
   "searchForClientsFields": "Search for clients",
   "goodMorning": "Good Morning",
   "upperChestMuscle": "Upper Chest Muscle",
@@ -233,6 +246,7 @@
   "snack": "Snack",
   "note": "Note",
   "apply": "Apply",
+  "notSet": "Not Set",
   "selectDayFirst": "Please select a day first",
   "savePlan": "Save Plan",
   "searchClients": "Search Clients",
@@ -325,6 +339,8 @@
   "verify": "Verify",
   "invalidOtpCode": "Invalid verification code. Please try again.",
   "retry": "Retry",
+  "loginFailed": "Login failed. Please check your credentials.",
+  "typing": "Typing",
   "noTraineesSubscribed": "No trainees are subscribed to you yet",
   "deletePlan": "Delete Plan",
   "deletePlanConfirmation": "Are you sure you want to delete this plan?",
@@ -336,6 +352,11 @@
   "fatsLabel": "Fats",
   "muscleLabel": "Muscle",
   "searchForCoachesFields": "Search for Coaches, fields..",
+  "searchTitle": "Search",
+  "allFilter": "All",
+  "recommendationsFilter": "Recommendations",
+  "showProfile": "Show Profile",
+  "viewCoach": "View Coach",
   "noRecommendedCoaches": "No recommended coaches available",
   "subscribe": "Subscribe",
   "subscribeConfirmTitle": "Subscribe to Coach",
@@ -349,6 +370,7 @@
   },
   "confirm": "Confirm",
   "subscribeSuccess": "Subscription request sent successfully",
+  "subscriptionRequestAcceptedSuccess": "Subscription request accepted successfully",
   "close": "Close",
   "subscriptionRequestsTitle": "Subscription Requests",
   "acceptRequest": "Accept",
@@ -419,6 +441,7 @@
   "unassignPlanSuccess": "Plan unassigned successfully",
   "unassignPlanError": "Failed to unassign plan. Please try again.",
   "coach": "Coach",
+  "traineeSubscriptionNotActive": "Trainee subscription might not be active.",
   "endSubscription": "End Subscription",
   "endSubscriptionTitle": "End Subscription",
   "endSubscriptionMessage": "Are you sure you want to end this trainee's subscription?",
